--- a/templates/users.html
+++ b/templates/users.html
@@ -4,10 +4,16 @@ $# A list of registered users
         	<p>Currently we have <span style="color:#f00">$len(users)</span> loverz!</p>
             <ul>
                 $for user in users:
-                    <li><a href="/user/${user.nickname}">${user.nickname}</a> (haz ${user.received_love} datalovez) 
-                    $if session_id:
-                        <a href="/user_give_${user.nickname}_datalove?sid=$session_id">Give some love</a></li>
-                    $else:
-                        <a href="/user_give_${user.nickname}_datalove">Give some love</a></li>
+                    <li>
+                        $if session_id:
+                            <a href="/user/${user.nickname}?sid=$session_id">${user.nickname}</a> 
+                        $else:
+                            <a href="/user/${user.nickname}">${user.nickname}</a>
+                        (haz ${user.received_love} datalovez)
+                        $if session_id:
+                            <a href="/user_give_${user.nickname}_datalove?sid=$session_id">Give some love</a>
+                        $else:
+                            <a href="/user_give_${user.nickname}_datalove">Give some love</a>
+                    </li>
             </ul>
         </div>
