--- a/templates/manage_account.html
+++ b/templates/manage_account.html
@@ -1,7 +1,7 @@
-$def with (nickname, email, website, session_id = None, email_change_error = None, pw_change_error = None, website_change_error = None)
+$def with (nickname, email, websites, session_id = None, email_change_error = None, pw_change_error = None, website_change_error = None)
 $# Is loaded as content on /manage_account (with index.html template).
         <style type="text/css">
-            input {
+            input, textarea {
                 border: #ffffff 1pt solid;
                 background-color: #000000;
                 font-family: monospace;
@@ -63,11 +63,8 @@ $# Is loaded as content on /manage_account (with index.html template).
             <div class="about" style="padding-left: 2em; text-align: right; width: 400px;">
                 $if session_id:
                     <input type="hidden" name="sid" value="$session_id">
-                Website:
-                $if website:
-                    <input type="text" name="website" value="$website"/><br />
-                $else:
-                    <input type="text" name="website"/><br />
+                Websites (one per line):
+                <textarea name="websites" cols="50" rows="10">$websites</textarea><br />
                 <span style="font-size: 75%;margin-bottom: 2px;text-align: left;">(The Website where your widget is placed)</span><br />
                 $if website_change_error:
                     <div style="font-size: 75%;color: #ff0000;margin-bottom: 2px;text-align: left;">
