--- a/templates/profilepage.html
+++ b/templates/profilepage.html
@@ -1,8 +1,14 @@
 $def with (nickname, user, error, logged_in = False, login_block = True, session_id = None)
         <p class="love">Username: $nickname</p>
         <p class="about">Recieved love: $user.received_love</p>
-        $if user.website:
-            <p class="about">Website: <a href="$user.website" target="_blank">$user.website</a></p>
+        $if len(user.websites) > 0:
+            <p class="about">
+                Websites: 
+                <ul>
+                    $for website in user.websites:
+                        <li><a href="$website" target="_blank">$website</a></li>
+                </ul>
+            </p><br />
         $if error: 
             <p style="font-size: 75%;color: #ff0000;margin-bottom: 2px;text-align: left;">$error</p>
         $if logged_in and session_id:
