--- a/templates/manage_account.html
+++ b/templates/manage_account.html
@@ -54,7 +54,7 @@ $# Is loaded as content on /manage_account (with index.html template).
                     <div style="font-size: 75%;color: #ff0000;margin-bottom: 2px;text-align: left;">
                         $pw_change_error
                     </div>
-                <input class="button" type="submit" value="Change password"/>
+                <input class="button" type="submit" name="change_pw" value="Change password"/>
             </div>
         </form>
         
