--- a/templates/userpage.html
+++ b/templates/userpage.html
@@ -1,8 +1,8 @@
-$def with (nickname,received_datalove,available_datalove)
+$def with (user)
 $# Is loaded as content on / (with index.html template) if user is logged in.
-        <p class="love">Ohai <a href="/user/$nickname">$nickname</a>,</p>
+        <p class="love">Ohai <a href="/user/$user.nickname">$user.nickname</a>,</p>
         <p class="about">
-            U haz $received_datalove datalovez received and $available_datalove
+            U haz $user.received_love datalovez received and $user.available_love
             waiting to be spread.
         </p>
         <!--Place holder-->
