And now it's tested, too <.<.

--- a/templates/session_expired.html
+++ b/templates/session_expired.html
@@ -1,8 +1,8 @@
-$def with (session_id)
+$def with ()
 $# Is loaded as content on anything (with index.html template) if session is expired.
         <p class="love">Session expired</p>
         <p class="about">
-            Your session "$session_id" is expired.
+            Your session is expired.
         </p>
         <!--Place holder-->
         <div style="height: 450px">&nbsp;</div>
