--- a/templates/profilepage.html
+++ b/templates/profilepage.html
@@ -12,6 +12,6 @@ $def with (nickname, user, error, logged_in = False, login_block = True, session
         $if error: 
             <p style="font-size: 75%;color: #ff0000;margin-bottom: 2px;text-align: left;">$error</p>
         $if logged_in and session_id:
-                <a href="/user_give_${nickname}_datalove?sid=$session_id">Give love!</a>
+                <a href="/user/${nickname}/give_datalove?sid=$session_id">Give love!</a>
         $if logged_in and not session_id:
-                <a href="/user_give_${nickname}_datalove">Give love!</a>
+                <a href="/user/${nickname}/give_datalove">Give love!</a>
