--- a/templates/users.html
+++ b/templates/users.html
@@ -1,7 +1,11 @@
-$def with (users, session_id = None)
+$def with (users, error = None, session_id = None)
 $# A list of registered users
         <div id="content">
         	<p>Currently we have <span style="color:#f00">$len(users)</span> loverz!</p>
+            $if error:
+                <div style="font-size: 75%;color: #ff0000;margin-bottom: 2px;text-align: left;">
+                    $error
+                </div>
             <ul>
                 $for user in users:
                     <li>
@@ -11,9 +15,9 @@ $# A list of registered users
                             <a href="/user/${user.nickname}">${user.nickname}</a>
                         (haz ${user.received_love} datalovez)
                         $if session_id:
-                            <a href="/user_give_${user.nickname}_datalove?sid=$session_id">Give some love</a>
+                            <a href="/users/give_${user.nickname}_datalove?sid=$session_id">Give some love</a>
                         $else:
-                            <a href="/user_give_${user.nickname}_datalove">Give some love</a>
+                            <a href="/users/give_${user.nickname}_datalove">Give some love</a>
                     </li>
             </ul>
         </div>
