--- a/templates/index.html
+++ b/templates/index.html
@@ -35,7 +35,7 @@ $else:
             $else:
                 <li><a href="/users">Loverz</a></li>
             <li><a href="http://datalove.me/give/faq.html">FAQ</a></li>
-            <li><a href="http://datalove.me/give/api.html">API Documentation</a></li>
+            <li><a href="/api">API Documentation</a></li>
         </ul>
         $if login_block:
             <style type="text/css">
