Reverted some of Escaping $

--- a/templates/api.html
+++ b/templates/api.html
@@ -1,5 +1,5 @@
-$$def with ()
-$$# The standard frame for all pages.
+$def with ()
+$# The standard frame for all pages.
 <div id="content">
 <p class="love">give.datalove API</p>
 <p class="abouth">Why an API?</p>
