Removed underlines in widget

--- a/templates/widget.html
+++ b/templates/widget.html
@@ -11,6 +11,10 @@ $# The standard frame for all pages.
         background-color: black
     }
     
+    a {
+        text-decoration: none;
+    }
+    
     .widget {
         color: #ff0000;
         text-align: center;
