--- a/templates/widgetpage.html
+++ b/templates/widgetpage.html
@@ -12,9 +12,13 @@ $def with (nickname = None)
 		<p class="about">Is is very easy. Just put this one line of code into your website or on your blog:</p>
 		<p class="about">
 			$if nickname:
-				<pre>&lt;iframe src="http://give.datalove.me:8080/widget?user=$nickname" width="70" height="71" style="border: none"&gt;&lt;/iframe&gt;</pre>
+				<pre>&lt;iframe src="http://give.datalove.me:8080/widget?user=$nickname" 
 			$else:
-				<pre>&lt;iframe src="http://give.datalove.me:8080/widget?user=&lt;your_nickname&gt;" width="70" height="71" style="border: none"&gt;&lt;/iframe&gt;</pre>
+				<pre>&lt;iframe src="http://give.datalove.me:8080/widget?user=&lt;your_nickname&gt;" 
+        width="70" 
+        height="71" 
+        style="border: none"&gt;
+&lt;/iframe&gt;</pre>
 		</p>
 		$if not nickname:
 			<p class="about">Where you have to replace <tt>&lt;your nickname&gt;</tt> with your own nickname, of cause, after you have <a href="/register">registered</a>.</p>
