--- a/templates/widgetpage.html
+++ b/templates/widgetpage.html
@@ -1,4 +1,9 @@
 $def with (nickname = None)
+		<style type="text/css">
+        pre {
+            border: 1pt #ffffff solid;
+        }
+		</style>
 		<p class="love">give.datalove widget</p>
 		<p class="abouth">What to do with this widget?</p>
 		<p class="about">We provide one widget to integrate into your website or into your blog and enter your username at the end. It looks like this:</p>
