Updated some text.

--- a/templates/widgetpage.html
+++ b/templates/widgetpage.html
@@ -14,7 +14,7 @@ $def with (nickname = None)
 				<iframe src="http://give.datalove.me:8080/widget?random" width="70" height="71" style="border: none"></iframe>
 		</p>
 		<p class="abouth">How do I integrate this widget?</p>
-		<p class="about">Is is very easy. Just put this one line of code into your website or on your blog:</p>
+		<p class="about">Is is very easy. Just put these lines of code into your website or on your blog:</p>
 		<p class="about">
 			$if nickname:
 				<pre>&lt;iframe src="http://give.datalove.me:8080/widget?user=$nickname" 
