--- a/datalove/templates/give/welcome.html
+++ b/datalove/templates/give/welcome.html
@@ -1,3 +1,4 @@
+{# Is loaded on '/' when no user is logged in. #}
 {% extends 'give/index.html' %}
 {% block logged_in_menu %}{% endblock %}
 {% block login_box %}
