[give/views/html.py] next field for login script

--- a/datalove/templates/give/welcome.html
+++ b/datalove/templates/give/welcome.html
@@ -47,6 +47,7 @@
                 <a href="register" style="font-size: 75%;">Register</a> |
                 <a href="reset_password" style="font-size: 75%;">Forgot password?</a>
                 <input class="button" type="submit" value="Login" /><br />
+                {% if next %}<input type="hidden" name="next" value="{{ next }}" />{% endif %}
             </div>
             {{ form.non_field_errors }}
         </form>
