[context_processors.py] Added Context Processor to redirect logout and login to the current path

--- a/datalove/templates/give/index.html
+++ b/datalove/templates/give/index.html
@@ -16,7 +16,7 @@
     <div id="sidebar">
         <ul>
 {% if logged_in %}
-            <li><a href="/logout">Logout</a></li>
+            <li><a href="/logout?next={{ path }}">Logout</a></li>
             <li><a href="/manage_account">Manage account</a></li>
             <li><a href="/history">History</a></li>
 {% endif %}
