[templates/give/*.html] Outsourced css to static css file

--- a/datalove/templates/give/index.html
+++ b/datalove/templates/give/index.html
@@ -4,6 +4,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <link rel="stylesheet" type="text/css" media="screen" href="http://datalove.me/datalove.css" />
+<link rel="stylesheet" type="text/css" media="screen" href="/static/css/give.css" />
 <link rel="shortcut icon" type="image/x-icon" href="http://datalove.me/datalove-favicon.png" />
 <title>~~~~=:) - give.datalove.me - (:=~~~~</title>
 </head>
