--- a/datalove/templates/give/history.html
+++ b/datalove/templates/give/history.html
@@ -1,33 +1,11 @@
 {% extends "give/index.html" %}
 {% block content %}
-<style type="text/css">
-    .historydiv {
-        width:45%;
-        float:left;
-        margin-right:5%;
-        
-    }
-    .historytable {
-        border:2px solid white;
-        border-collapse:collapse;
-        width:100%;
-    }
-    .historytable tr td {
-        margin:0;
-        border:1px solid white;
-        padding:2px 7px;
-        font-size:14px;
-    }
-    .historytable tr th {
-       border-bottom:2px solid white;
-    }
-</style>
 <div style="overflow: hidden; min-height:400px;">
 <p class="love">History</p>
 <p class="about">The last 30 transactions</p>
-<div class="historydiv">
+<div class="history">
     <p class="abouth">Received</p>
-    <table class="historytable">
+    <table>
     <tr><th>From</th><th>Amount</th><th>Time</th></tr>
     {% for i in received %}
         <tr>
@@ -38,9 +16,9 @@
     {%endfor%}
     </table>
 </div>
-<div class="historydiv">
+<div class="history">
     <p class="abouth">Sent</p>
-    <table class="historytable">
+    <table>
     <tr><th>To</th><th>Amount</th><th>Time</th></tr>
     {% for i in sent %}
         <tr>
