--- a/datalove/templates/give/register.html
+++ b/datalove/templates/give/register.html
@@ -3,7 +3,7 @@
 {% block logged_in_menu %}{% endblock %}
 {% block content %}
         <p class="love">Register to give.datalove.me</p>
-        <form method="post" action="#">{% csrf_token %}
+        <form method="post" action="{% url register %}">{% csrf_token %}
             <div class="about" style="padding-left: 2em; text-align: right; width: 400px;">
                 {{ form.as_p }}
                 <input class="button" type="submit" value="Register account" /> <br />
