--- a/datalove/templates/give/reset_password.html
+++ b/datalove/templates/give/reset_password.html
@@ -4,7 +4,7 @@
         <p class="love">Reset password</p>
         {% block reset_password_message %} <p class="about">Please enter your email address to reset your password.</p>{% endblock %}
         {% block reset_password_form %}
-        <form method="post" action="#">{% csrf_token %}
+        <form method="post" action="{{ path }}">{% csrf_token %}
             <div class="about" style="padding-left: 2em; text-align: right; width: 450px;">
                 {{ form.as_p }}
                 <input class="button" type="submit" value="Reset password" /> <br />
