--- a/datalove/templates/give/userpage.html
+++ b/datalove/templates/give/userpage.html
@@ -1,10 +1,10 @@
 {# Is loaded on '/' when a user is logged in. #}
 {% extends 'give/index.html' %}
 {% block content %}
-<p class="love">Ohai <a href="/user/{{ profile.user.username }}">{{ profile.user.username }}</a>,</p>
+<p class="love">Ohai <a href="{% url profile userprofile.username %}">{{ userprofile.username }}</a>,</p>
         <p class="about">
-            U haz <span id="received_love">{{ profile.received_love }}</span> 
-            datalovez received and <span id="available_love">{{ profile.available_love }}</span>
+            U haz <span id="received_love">{{ userprofile.received_love }}</span> 
+            datalovez received and <span id="available_love">{{ userprofile.available_love }}</span>
             waiting to be spread.
         </p>
         <!--Place holder-->
