--- a/datalove/templates/give/reset_password_complete.html
+++ b/datalove/templates/give/reset_password_complete.html
@@ -2,7 +2,7 @@
 {% block reset_password_message %}
         <p class="about">
             Password reset successfully.
-            <a href="/">Back to main page.</a>
+            <a href="{% url index %}">Back to main page.</a>
         </p>
 {% endblock %}
 {% block reset_password_form %}{% endblock %}
