--- a/datalove/templates/give/history.html
+++ b/datalove/templates/give/history.html
@@ -22,7 +22,11 @@
     <tr><th>To</th><th>Amount</th><th>Time</th></tr>
     {% for i in sent %}
         <tr>
-            <td><a href="{{ i.sender.username }}">{{ i.sender.username }}</a></td>
+            {% if i.recipient.dataloveprofile %}
+            <td><a href="{% url profile i.recipient.dataloveprofile.username %}">{{ i.recipient.dataloveprofile.username }}</a></td>
+            {% else %}
+            <td>{{ i.recipient.id }}</td>
+            {% endif %}
             <td style="text-align: center;">{{ i.amount }}</td>
             <td>{{ i.timestamp|date:"Y M. j, H:m (O)" }}</td>
         </tr>
