AJAX calls for login

--- a/templates/give/index.html
+++ b/templates/give/index.html
@@ -6,6 +6,8 @@
 <link rel="stylesheet" type="text/css" media="screen" href="http://datalove.me/datalove.css" />
 <link rel="stylesheet" type="text/css" media="screen" href="/static/css/give.css" />
 <link rel="shortcut icon" type="image/x-icon" href="http://datalove.me/datalove-favicon.png" />
+<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+<script type="text/javascript" src="/static/js/give.js"></script>
 <title>~~~~=:) - give.datalove.me - (:=~~~~</title>
 </head>
 <body>
