Make pass for register and reset_password absolute

--- a/templates/give/login_box.html
+++ b/templates/give/login_box.html
@@ -9,8 +9,8 @@
                 <label class="input_label" style="font-size: 75%; text-align: right;">{{ form.password.label }}</label><br />
                 {{ form.password }}<br />
                 {{ form.password.errors }}
-                <a href="register" style="font-size: 75%;">Register</a> |
-                <a href="reset_password" style="font-size: 75%;">Forgot password?</a>
+                <a href="/register" style="font-size: 75%;">Register</a> |
+                <a href="/reset_password" style="font-size: 75%;">Forgot password?</a>
                 <input class="button" type="submit" value="Login" /><br />
                 <input type="hidden" name="next" value="{% if next %}{{ next }}{% else %}{{ path }}{% endif %}" />
                 <input type="hidden" name="ajax_action" value="{% url ajax__login %}" />
